# IAU-Project

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  todo.md
Dataset/: connections.csv  devices.csv
Image_Classification/: README.md  pyproject.toml  requirements.txt  todo.md
Image_Classification/data/periocular/raw/: bbox.csv  images.csv  landmarks.csv
Image_Classification/model_history/: history_1_clearing_grayscale_128.csv  history_1_clearing_grayscale_64.csv  history_1_clearing_grayscale_96.csv  history_1_clearing_rgb_128.csv  history_1_clearing_rgb_128_kernel.csv  history_1_clearing_rgb_64.csv  history_1_clearing_rgb_96.csv  history_1_clearing_rgb_skip_128.csv  history_1_clearing_rgb_skip_128_kernel.csv  history_1_clearing_rgb_skip_64.csv  history_1_clearing_rgb_skip_64_learn0.0001.csv  history_1_clearing_rgb_skip_64_learn0.0001_kernel33.csv  history_1_clearing_rgb_skip_64_learn0.0005.csv  history_1_clearing_rgb_skip_64_learn0.00075.csv  history_1_clearing_rgb_skip_64_learn0.0015.csv  history_1_clearing_rgb_skip_64_learn0.002.csv  history_1_clearing_rgb_skip_64_learn0.005.csv  history_1_clearing_rgb_skip_64_learn0.01.csv  history_1_clearing_rgb_skip_96.csv  history_2_clearing_rgb_skip_64.csv  history_3_clearing_rgb_skip_64.csv  history_no_clearing_rgb_skip_64.csv
Image_Classification/src/: Main.ipynb  Testing-GPU.ipynb  Testing.ipynb
Zadanie_1_3/: pyproject.toml
Zadanie_1_3/data/clean_methods/: test_1zscore.csv  train_1iqr.csv  train_1zscore.csv  train_itiqr.csv  train_itzscore.csv
Zadanie_1_3/data/raw/: profiles.csv
Zadanie_1_3/src/: Phase_2.ipynb
Zadanie_1_3/zadanie/: link.txt
data/clean/: test_data.csv  train_data.csv
data/clean_methods/: test_1iqr.csv  test_1zscore.csv  test_itiqr.csv  test_itzscore.csv
data/processed/: test_data.csv  train_data.csv
data/raw/: processes.csv
src/: Bonus_povinny_4.ipynb  Phase_1.ipynb  Phase_2.ipynb  Phase_3.ipynb  main.ipynb  todo.md
zadanie/: link.txt
