[tool.poetry]
name = "iau-project"
version = "1.0.0"
description = ""
authors = ["Mário Babiar <mariobabiar11@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"	
numpy = "^2.1.2"
pandas = "^2.2.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
statsmodels = "^0.14.4"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"
graphviz = "^0.20.3"
tqdm = "^4.67.0"
jupyter = "^1.1.1"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"